cambio resumen blog index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div id="home" class="section active">
     <div class="abstract">
-        <strong>Resumen:</strong> Este blog académico presenta reflexiones, análisis y discusiones sobre temas contemporáneos en matemáticas, ciencias, filosofía y metodología de investigación. El objetivo es fomentar el diálogo académico y compartir perspectivas críticas sobre fenómenos complejos.
+        <strong>Resumen:</strong> Este blog académico presenta reflexiones, análisis y discusiones sobre temas contemporáneos en matemáticas, ciencias, filosofía, metodología de investigación y cualquier tema que llegue a causarme curiosidad. No soy profesional ni me dedico a cada cosa de la que escribo, por lo que es menester aclarar que no busco más que aprender, incluso cuando eso llegue al error. El objetivo es fomentar el diálogo académico respetuoso, a demás de, por supuesto, mi dialogo personal, y compartir perspectivas críticas sobre fenómenos complejos.
     </div>
 
     <div class="section-title">Últimas Publicaciones</div>
